--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                    <h2 class="heading mb-4">Gautam Mour</h2>
                    <h5 class="mb-2">D.P. Mour & Sons, TRP Road, Fancy Bazar</h5>
                   <div class="text pt-4">
-                    <p>I've know Alok Gupta for a long time and I've always kept my faith in his words. He's always true to his commitment.</p>
+                    <p>I've known Alok Gupta for a long time and I've always kept my faith in his words. He's always true to his commitment.</p>
                   </div>
                 </div>
 
