--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <body>
   	  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
   	    <div class="container">
-  	      <a class="navbar-brand" href="index.html">555 Rice Mills<span>.</span></a>
+  	      <a class="navbar-brand" href="index.html" style="color:#E61612;font-size: 300%;">555 Rice Mills<span>.</span></a>
   	    </div>
   	  </nav>
       <!-- END nav -->
@@ -36,9 +36,7 @@
         <div class="overlay"></div>
         <div class="container">
           <div class="row no-gutters slider-text align-items-end justify-content-center">
-            <div class="col-md-9 ftco-animate pb-5 text-center">
-              <h1 class="mb-3 bread">555 Rice Mills</h1>
-            </div>
+          
           </div>
         </div>
       </section>
@@ -196,7 +194,7 @@
         <div class="col">
           <div class="col-lg-8 order-lg-last ftco-animate">
             <h1 class="heading mb-4">Alok Gupta</h1>
-            <p><strong>Alok Gupta</strong> has been associated with Sachit Agarwal since the inception of 555 Rice Mills. He has handled the distribution while Sachit Agarwal handled the production and quality control. Together we aim to provide you with the best quality of rice at minimum cost in North East India.</p>
+            <p><strong>Alok Gupta</strong> has been in the rice business since more than 20 years. He has been associated with Sachit Agarwal since the inception of 555 Rice Mills. He has used his years of experience to ensure that 555 brand rice remains as the brand leader in the segment. Together with Sachit Agarwal, he is responsible for policy making, distribution and handling offers and schemes for 555 brand rice.</p>
             </div>
           </div>
         </div>
@@ -259,7 +257,7 @@
             <div class="col-md">
               <div class="ftco-footer-widget mb-4">
                 <h2 class="ftco-heading-2">555 Rice Mills</h2>
-                <p>We specialize in all variants of Rice. We have been in the industry for decades and have boast years of experience.</p>
+                <p>Our social media presence is coming soon. Stay tuned!</p>
                 <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -294,7 +292,7 @@
   	              <ul>
   	                <li><span class="icon icon-map-marker"></span><span class="text">Gupta Brothers, TR Phookan Road, Fancy Bazar, Guwahati, Assam</span></li>
   	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 98640 90186</span></a></li>
-  	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">alokguptafb@gmail.com</span></a></li>
+  	                <li><a href="mailto:alokguptafb@gmail.com"><span class="icon icon-envelope"></span><span class="text">alokguptafb@gmail.com</span></a></li>
   	              </ul>
   	            </div>
               </div>
